# formation-cpp-moderne-ubuntu

./: .gitignore  LICENSE  README.md  SOMMAIRE.md  module-01-environnement-developpement-linux.md  module-02-fondamentaux-langage.md  module-03-programmation-orientee-objet.md  module-04-cpp-moderne.md  module-05-stl.md  module-06-gestion-erreurs.md  module-07-programmation-systeme.md  module-08-parsing-formats.md  module-09-build-systems.md  module-10-debogage-profiling.md  module-11-tests-qualite.md  module-12-outils-cli.md  module-13-devops.md  module-14-optimisation.md  module-15-interoperabilite.md  module-16-patterns-architecture.md  module-17-architecture-projet.md  partie-01-fondations.md  partie-02-cpp-moderne.md  partie-03-programmation-systeme-linux.md  partie-04-tooling-build-systems.md  partie-05-devops-cloud-native.md  partie-06-sujets-avances.md  partie-07-projet-professionnalisation.md
01-introduction-cpp-linux/: 01-histoire-evolution-cpp.md  02-pourquoi-cpp-devops.md  03-cycle-compilation.md  03.1-preprocesseur.md  03.2-compilation.md  03.3-edition-liens.md  04-anatomie-elf.md  04.1-structure-elf.md  04.2-inspection-elf.md  README.md
02-toolchain-ubuntu/: 01-installation-compilateurs.md  01.1-gestion-versions.md  01.2-gcc-vs-clang.md  01.3-etat-compilateurs-2026.md  02-outils-essentiels.md  03-ccache.md  03.1-installation-ccache.md  03.2-integration-cmake-make.md  03.3-statistiques-cache.md  06.1-warnings.md  (+18 more)
28-make-ninja/exemples/04_meson_projet/: main.cpp  meson.build
28-make-ninja/exemples/04_meson_projet/src/: greeter.cpp  greeter.h  meson.build
(+1228 files in other folders)
